test/files/neg/bug2102.check
bug2102.scala:2: error: type mismatch;
 found   : java.util.Iterator[Int]
 required: scala.collection.Iterator[_]
  val x: Iterator[_] = new java.util.ArrayList[Int]().iterator
                                                      ^
one error found
